--- a/css/style.scss
+++ b/css/style.scss
@@ -1,14 +1,16 @@
 header {
+
   .container-fluid {
-    // background-color: #060606;
-    //  height: 100%;
-    background-image: url("../images/bg.png");
-    background-position: top left;
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding-bottom: 1000px;
+     background-color: #060606;
+   // height: 100%;
+
+  //  padding-bottom: 1000px;
 
     .container {
+      background-image: url("../images/bg_2.png");
+      background-position: top center;
+      background-size: contain;
+      background-repeat: no-repeat;
       color: white;
       font-size: 18px;
       .row {
@@ -48,7 +50,7 @@ header {
 
       }
       .description {
-        .col-md-4 {
+        .list_and_product {
           h3 {
             font-size: 22px;
           }
@@ -70,13 +72,149 @@ header {
               }
             }
           }
-          img{
+          img {
             margin-top: 0;
           }
 
         }
+        .count_and_form {
+
+          .notification {
+            border-radius: 10%;
+            p {
+              padding-left: 10px;
+              color: #FFFFFF;
+              opacity: 1;
+            }
+            max-width: 145px;
+
+            display: inline-block;
+            background-color: black;
+            opacity: .8;
+
+          }
+          .contact_form{
+            form{
+              background-image: url("../images/form_head.png");
+              background-size: cover;
+              background-repeat: no-repeat;
+              background-position: top center;
+              padding-top: 15px;
+
+              input{
+
+              }
+              button{
+
+              }
+            }
+
+          }
+        }
 
       }
+
     }
   }
 }
+
+/* Contdonwn */
+
+body {
+
+  color: #000;
+}
+
+h1,
+h2 {
+  margin: 0;
+  color: #000;
+
+  text-shadow: 0 3px 3px #000000;
+}
+
+h1 {
+  font-size: 50px;
+  margin: 0 0 10px;
+  line-height: 1;
+}
+
+h2 {
+  font-size: 18px;
+}
+
+#CDT {
+  font-size: 50px;
+  color: #000;
+  margin: 70px 0 0;
+  font-weight: bold;
+  display: inline-block;
+}
+
+#CDT .number-wrapper {
+  margin: 5px;
+  -moz-box-shadow: 0 5px 8px #000000;
+  -webkit-box-shadow: 0 5px 8px #000000;
+  box-shadow: 0 5px 8px #000000;
+  position: relative;
+}
+
+#CDT .number {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  background: #FFF;
+
+  -webkit-border-top-right-radius: 7px;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 7px;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  padding: 0 12px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  border: 1px solid #555;
+  -moz-box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
+  -moz-text-shadow: 0 3px 3px #000000;
+  -webkit-text-shadow: 0 3px 3px #000000;
+  text-shadow: 0 3px 3px #000000;
+}
+
+#CDT .line {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  top: 52%;
+  left: 0;
+  background: #000;
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+}
+
+.caption {
+  font-size: 12px;
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  color: #777;
+}
+
