--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'RobotoCondensBold';
+  src: url("../fonts/RobotoCondensBold.eot");
+  src: url("../fonts/RobotoCondensBold.eot") format("embedded-opentype"), url("../fonts/RobotoCondensBold.woff2") format("woff2"), url("../fonts/RobotoCondensBold.woff") format("woff"), url("../fonts/RobotoCondensBold.ttf") format("truetype"), url("../fonts/RobotoCondensBold.svg#RobotoCondensBold") format("svg"); }
 header .container-fluid {
   background-color: #060606; }
   header .container-fluid .container {
@@ -10,8 +14,11 @@ header .container-fluid {
     header .container-fluid .container .row .col-md-4 img {
       margin-top: 24px; }
     header .container-fluid .container .row .col-md-3 {
+      font-family: 'PT Sans', sans-serif;
       margin-top: 30px; }
       header .container-fluid .container .row .col-md-3 h5 {
+        font-family: 'PT Sans', sans-serif;
+        font-weight: bold;
         display: inline-block;
         font-size: 24px;
         font-weight: bold; }
@@ -22,41 +29,129 @@ header .container-fluid {
         font-size: 24px;
         font-weight: bold; }
     header .container-fluid .container .row .col-md-12 h1 {
+      font-family: 'RobotoCondensBold';
       font-size: 60px;
       color: #ffd50c;
       margin-top: 15px; }
-    header .container-fluid .container .description .list_and_product h3 {
-      font-size: 22px; }
-    header .container-fluid .container .description .list_and_product ul {
-      list-style: none;
-      padding-left: 0;
-      margin-bottom: 0; }
-      header .container-fluid .container .description .list_and_product ul li {
-        padding-bottom: 5px;
-        border-bottom: solid 2px transparent;
-        border-image: linear-gradient(45deg, #000, #FFF, #000);
-        border-image-slice: 1; }
-        header .container-fluid .container .description .list_and_product ul li i {
-          color: #c23814;
-          margin-right: 10px; }
-    header .container-fluid .container .description .list_and_product img {
-      margin-top: 0; }
-    header .container-fluid .container .description .count_and_form .notification {
-      border-radius: 10%;
-      max-width: 145px;
-      display: inline-block;
-      background-color: black;
-      opacity: .8; }
-      header .container-fluid .container .description .count_and_form .notification p {
-        padding-left: 10px;
-        color: #FFFFFF;
-        opacity: 1; }
-    header .container-fluid .container .description .count_and_form .contact_form form {
-      background-image: url("../images/form_head.png");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: top center;
-      padding-top: 15px; }
+    header .container-fluid .container .description {
+      font-family: 'Roboto', sans-serif; }
+      header .container-fluid .container .description .list_and_product h3 {
+        font-size: 22px; }
+      header .container-fluid .container .description .list_and_product ul {
+        font-family: 'PT Sans', sans-serif;
+        list-style: none;
+        padding-left: 0;
+        margin-bottom: 0; }
+        header .container-fluid .container .description .list_and_product ul li {
+          padding-bottom: 5px;
+          border-bottom: solid 2px transparent;
+          border-image: linear-gradient(45deg, #000, #FFF, #000);
+          border-image-slice: 1; }
+          header .container-fluid .container .description .list_and_product ul li i {
+            color: #c23814;
+            margin-right: 10px; }
+      header .container-fluid .container .description .list_and_product img {
+        margin-top: 0; }
+      header .container-fluid .container .description .count_and_form .notification {
+        border-radius: 10%;
+        max-width: 145px;
+        display: inline-block;
+        background-color: black;
+        opacity: .8; }
+        header .container-fluid .container .description .count_and_form .notification p {
+          font-family: 'PT Sans Narrow', sans-serif;
+          padding-left: 10px;
+          color: #FFFFFF;
+          opacity: 1; }
+      header .container-fluid .container .description .count_and_form .contact_form {
+        margin-top: 30px;
+        margin-bottom: 25px; }
+        header .container-fluid .container .description .count_and_form .contact_form form {
+          border-radius: 5px;
+          max-width: 290px;
+          background-color: #FFFFFF; }
+          header .container-fluid .container .description .count_and_form .contact_form form .form_head {
+            background-image: url("../images/top.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: top left;
+            height: 130px;
+            margin-bottom: 10px; }
+            header .container-fluid .container .description .count_and_form .contact_form form .form_head .price {
+              font-family: 'PT Sans Narrow', sans-serif;
+              display: inline-block;
+              margin: 10px 0 0 16px; }
+              header .container-fluid .container .description .count_and_form .contact_form form .form_head .price:nth-child(2) {
+                margin-left: 35px;
+                font-weight: bold; }
+                header .container-fluid .container .description .count_and_form .contact_form form .form_head .price:nth-child(2) h6 {
+                  opacity: 1; }
+                header .container-fluid .container .description .count_and_form .contact_form form .form_head .price:nth-child(2) h4 {
+                  opacity: 1; }
+                  header .container-fluid .container .description .count_and_form .contact_form form .form_head .price:nth-child(2) h4:before {
+                    content: none; }
+              header .container-fluid .container .description .count_and_form .contact_form form .form_head .price h6 {
+                margin: 0;
+                font-size: 16px;
+                opacity: 0.3; }
+              header .container-fluid .container .description .count_and_form .contact_form form .form_head .price h4 {
+                opacity: 0.3;
+                font-size: 38px;
+                position: relative; }
+                header .container-fluid .container .description .count_and_form .contact_form form .form_head .price h4:before {
+                  content: "________";
+                  position: absolute;
+                  top: -20px;
+                  left: 10px; }
+          header .container-fluid .container .description .count_and_form .contact_form form input {
+            font-family: 'PT Sans', sans-serif;
+            margin-left: 17px;
+            width: 255px;
+            height: 55px;
+            border-radius: 5px;
+            margin-bottom: 15px;
+            background-color: #f6f6f6;
+            padding-left: 16px;
+            color: #929292;
+            font-size: 14px;
+            border: solid 1px #e1e1e1;
+            box-shadow: none; }
+          header .container-fluid .container .description .count_and_form .contact_form form button {
+            font-family: 'PT Sans Narrow', sans-serif;
+            font-weight: bold;
+            position: relative;
+            margin-top: 10px;
+            width: 255px;
+            height: 55px;
+            background-color: #f5481b;
+            margin-left: 17px;
+            border-radius: 5px;
+            box-shadow: none;
+            border: none;
+            -webkit-box-shadow: 1px 1px 15px 1px #b13412;
+            box-shadow: 1px 1px 15px 1px #b13412; }
+            header .container-fluid .container .description .count_and_form .contact_form form button i {
+              border-top-left-radius: 5px;
+              border-bottom-left-radius: 5px;
+              position: absolute;
+              padding-top: 15px;
+              font-size: 25px;
+              top: 0;
+              width: 50px;
+              margin: auto;
+              left: 0;
+              background-color: #b13412;
+              height: 55px; }
+          header .container-fluid .container .description .count_and_form .contact_form form p {
+            font-family: 'PT Sans Narrow', sans-serif;
+            padding-bottom: 30px;
+            margin-top: 20px;
+            margin-bottom: 0;
+            color: black;
+            font-size: 14px;
+            margin-left: 25px; }
+            header .container-fluid .container .description .count_and_form .contact_form form p i {
+              margin-right: 9px; }
 
 /* Contdonwn */
 body {
@@ -79,7 +174,7 @@ h2 {
 #CDT {
   font-size: 50px;
   color: #000;
-  margin: 70px 0 0;
+  margin: 20px 0 0;
   font-weight: bold;
   display: inline-block; }
 
