--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,20 @@
+@font-face {
+  font-family: 'RobotoCondensBold';
+  src: url('../fonts/RobotoCondensBold.eot');
+  src: url('../fonts/RobotoCondensBold.eot') format('embedded-opentype'),
+  url('../fonts/RobotoCondensBold.woff2') format('woff2'),
+  url('../fonts/RobotoCondensBold.woff') format('woff'),
+  url('../fonts/RobotoCondensBold.ttf') format('truetype'),
+  url('../fonts/RobotoCondensBold.svg#RobotoCondensBold') format('svg');
+}
+
 header {
 
   .container-fluid {
-     background-color: #060606;
-   // height: 100%;
+    background-color: #060606;
+    // height: 100%;
 
-  //  padding-bottom: 1000px;
+    //  padding-bottom: 1000px;
 
     .container {
       background-image: url("../images/bg_2.png");
@@ -21,9 +31,11 @@ header {
 
         }
         .col-md-3 {
+          font-family: 'PT Sans', sans-serif;
           margin-top: 30px;
           h5 {
-
+            font-family: 'PT Sans', sans-serif;
+            font-weight: bold;
             display: inline-block;
             font-size: 24px;
             font-weight: bold;
@@ -42,6 +54,7 @@ header {
         }
         .col-md-12 {
           h1 {
+            font-family: 'RobotoCondensBold';
             font-size: 60px;
             color: #ffd50c;
             margin-top: 15px;
@@ -50,11 +63,13 @@ header {
 
       }
       .description {
+        font-family: 'Roboto', sans-serif;
         .list_and_product {
           h3 {
             font-size: 22px;
           }
           ul {
+            font-family: 'PT Sans', sans-serif;
             list-style: none;
             padding-left: 0;
             margin-bottom: 0;
@@ -82,6 +97,7 @@ header {
           .notification {
             border-radius: 10%;
             p {
+              font-family: 'PT Sans Narrow', sans-serif;
               padding-left: 10px;
               color: #FFFFFF;
               opacity: 1;
@@ -93,19 +109,118 @@ header {
             opacity: .8;
 
           }
-          .contact_form{
-            form{
-              background-image: url("../images/form_head.png");
-              background-size: cover;
-              background-repeat: no-repeat;
-              background-position: top center;
-              padding-top: 15px;
+          .contact_form {
+            margin-top: 30px;
+            margin-bottom: 25px;
+            form {
+              border-radius: 5px;
+              max-width: 290px;
 
-              input{
+              background-color: #FFFFFF;
+              .form_head {
+                .price {
+                  &:nth-child(2) {
+                    margin-left: 35px;
+                    font-weight: bold;
+                    h6{
+                      opacity: 1;
+                    }
+                    h4{
+                      opacity: 1;
+                      &:before{
+                        content: none;
+                      }
+                    }
+                  }
+                  font-family: 'PT Sans Narrow', sans-serif;
+                  display: inline-block;
+                  margin: 10px 0 0 16px;
+                  h6 {
+                    margin: 0;
+                    font-size: 16px;
+                    opacity: 0.3;
+
+                  }
+                  h4 {
+                    opacity: 0.3;
+                    font-size: 38px;
+                    position: relative;
+
+                    &:before {
+                      content: "________";
+                      position: absolute;
+                      top: -20px;
+                      left: 10px;
+
+                    }
+
+                  }
+                }
+                background-image: url("../images/top.png");
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: top left;
+                height: 130px;
+                margin-bottom: 10px;
 
               }
-              button{
 
+              input {
+                font-family: 'PT Sans', sans-serif;
+                margin-left: 17px;
+                width: 255px;
+                height: 55px;
+                border-radius: 5px;
+                margin-bottom: 15px;
+                background-color: #f6f6f6;
+                padding-left: 16px;
+                color: #929292;
+                font-size: 14px;
+                border: solid 1px #e1e1e1;
+                box-shadow: none;
+
+              }
+              button {
+                font-family: 'PT Sans Narrow', sans-serif;
+                font-weight: bold;
+                position: relative;
+                margin-top: 10px;
+                width: 255px;
+                height: 55px;
+                background-color: #f5481b;
+                margin-left: 17px;
+                border-radius: 5px;
+                box-shadow: none;
+                border: none;
+                -webkit-box-shadow: 1px 1px 15px 1px #b13412;
+                box-shadow: 1px 1px 15px 1px #b13412;
+                i {
+                  border-top-left-radius: 5px;
+                  border-bottom-left-radius: 5px;
+                  position: absolute;
+                  padding-top: 15px;
+                  font-size: 25px;
+                  top: 0;
+                  width: 50px;
+                  margin: auto;
+                  left: 0;
+                  background-color: #b13412;
+                  height: 55px;
+
+                }
+
+              }
+              p {
+                font-family: 'PT Sans Narrow', sans-serif;
+                padding-bottom: 30px;
+                margin-top: 20px;
+                margin-bottom: 0;
+                color: black;
+                font-size: 14px;
+                margin-left: 25px;
+                i {
+                  margin-right: 9px;
+                }
               }
             }
 
@@ -146,7 +261,7 @@ h2 {
 #CDT {
   font-size: 50px;
   color: #000;
-  margin: 70px 0 0;
+  margin: 20px 0 0;
   font-weight: bold;
   display: inline-block;
 }
