--- a/css/style.scss
+++ b/css/style.scss
@@ -109,6 +109,17 @@ header {
             opacity: .8;
 
           }
+          .sale{
+            
+            text-align: center;
+
+            img{
+              margin-bottom: 0}
+            h3{
+              margin-bottom: 0;
+            }
+
+          }
           .contact_form {
             margin-top: 30px;
             margin-bottom: 25px;
