--- a/css/style.scss
+++ b/css/style.scss
@@ -88,9 +88,24 @@ header {
             }
           }
           img {
+
             margin-top: 0;
+            width: 100%;
           }
 
+        }
+        .sale {
+          .discount {
+            margin-top: 340px;
+            img {
+              width: 75%;
+            }
+            h3 {
+              font-size: 19px;
+              font-family: 'PT Sans Narrow', sans-serif;
+
+            }
+          }
         }
         .count_and_form {
 
@@ -109,17 +124,7 @@ header {
             opacity: .8;
 
           }
-          .sale{
-            
-            text-align: center;
 
-            img{
-              margin-bottom: 0}
-            h3{
-              margin-bottom: 0;
-            }
-
-          }
           .contact_form {
             margin-top: 30px;
             margin-bottom: 25px;
@@ -132,13 +137,14 @@ header {
                 .price {
                   &:nth-child(2) {
                     margin-left: 35px;
-                    font-weight: bold;
-                    h6{
+
+                    h6 {
                       opacity: 1;
                     }
-                    h4{
+                    h4 {
                       opacity: 1;
-                      &:before{
+                      font-weight: bold;
+                      &:before {
                         content: none;
                       }
                     }
@@ -240,6 +246,81 @@ header {
 
       }
 
+    }
+  }
+}
+
+section {
+  .question {
+    color: white;
+    .container-fluid {
+      background-color: black;
+      .container {
+        padding-bottom: 500px;
+        background-image: url("../images/fire.png");
+        background-position: top center;
+        background-size: contain;
+        background-repeat: no-repeat;
+
+        .row {
+          .col-md-12 {
+            margin-top: 70px;
+            h2 {
+              font-family: 'PT Sans Narrow', sans-serif;
+              text-transform: uppercase;
+              display: inline-block;
+              margin-left: 3px;
+              color: #FFFFFF;
+              font-size: 46px;
+              font-weight: bold;
+
+              &:nth-of-type(2) {
+                color: red;
+
+              }
+              &:nth-of-type(4) {
+                color: red;
+              }
+              &:nth-of-type(3) {
+                font-weight: normal;
+              }
+
+            }
+            h4 {
+              font-size: 22px;
+              line-height: 60px;
+              margin: 0;
+              font-family: "PT Sans", sans-serif;
+            }
+            .question_block {
+              background-color: #FFFFFF;
+              color: black;
+              font-family: "PT Sans", sans-serif;
+
+
+              span{
+background-color: #e5e5e5;
+                font-size: 30px;
+                font-family: "PT Sans", sans-serif;
+                font-weight: bold;
+                line-height: 60px;
+                padding-left: 14px;
+               padding-right: 14px;
+                margin-right: 15px;
+               // border: solid 1px black;
+                border-radius:50%;
+              }
+              h4{
+                font-weight: bold;
+                display: inline-block;
+
+              }
+
+            }
+          }
+        }
+
+      }
     }
   }
 }
