--- a/css/style.css
+++ b/css/style.css
@@ -172,12 +172,12 @@ section .question {
       background-size: contain;
       background-repeat: no-repeat; }
       section .question .container-fluid .container .row .col-md-12 {
-        margin-top: 70px; }
+        margin-top: 100px; }
         section .question .container-fluid .container .row .col-md-12 h2 {
           font-family: 'PT Sans Narrow', sans-serif;
           text-transform: uppercase;
           display: inline-block;
-          margin-left: 3px;
+          margin-left: 5px;
           color: #FFFFFF;
           font-size: 46px;
           font-weight: bold; }
@@ -193,6 +193,9 @@ section .question {
           margin: 0;
           font-family: "PT Sans", sans-serif; }
         section .question .container-fluid .container .row .col-md-12 .question_block {
+          border-radius: 10px;
+          margin: auto;
+          max-width: 640px;
           background-color: #FFFFFF;
           color: black;
           font-family: "PT Sans", sans-serif; }
@@ -206,9 +209,29 @@ section .question {
             padding-right: 14px;
             margin-right: 15px;
             border-radius: 50%; }
-          section .question .container-fluid .container .row .col-md-12 .question_block h4 {
-            font-weight: bold;
-            display: inline-block; }
+            section .question .container-fluid .container .row .col-md-12 .question_block span:nth-of-type(2) {
+              background-color: transparent;
+              padding-left: 0;
+              padding-right: 0;
+              margin-right: 0; }
+          section .question .container-fluid .container .row .col-md-12 .question_block .buttons {
+            margin-top: 40px; }
+            section .question .container-fluid .container .row .col-md-12 .question_block .buttons a {
+              margin-bottom: 50px;
+              line-height: 80px;
+              width: 250px;
+              border-radius: 10px;
+              color: white;
+              background-image: url("../images/button.png");
+              background-position: top center;
+              background-size: cover;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 24px;
+              font-family: "PT Sans", sans-serif;
+              font-weight: bold; }
+              section .question .container-fluid .container .row .col-md-12 .question_block .buttons a:nth-of-type(2) {
+                margin-left: 20px; }
 
 /* Contdonwn */
 body {
