--- a/css/style.scss
+++ b/css/style.scss
@@ -264,12 +264,12 @@ section {
 
         .row {
           .col-md-12 {
-            margin-top: 70px;
+            margin-top: 100px;
             h2 {
               font-family: 'PT Sans Narrow', sans-serif;
               text-transform: uppercase;
               display: inline-block;
-              margin-left: 3px;
+              margin-left: 5px;
               color: #FFFFFF;
               font-size: 46px;
               font-weight: bold;
@@ -293,29 +293,56 @@ section {
               font-family: "PT Sans", sans-serif;
             }
             .question_block {
+
+              border-radius: 10px;
+              margin: auto;
+              max-width: 640px;
               background-color: #FFFFFF;
               color: black;
               font-family: "PT Sans", sans-serif;
 
-
-              span{
-background-color: #e5e5e5;
+              span {
+                background-color: #e5e5e5;
                 font-size: 30px;
                 font-family: "PT Sans", sans-serif;
                 font-weight: bold;
                 line-height: 60px;
                 padding-left: 14px;
-               padding-right: 14px;
+                padding-right: 14px;
                 margin-right: 15px;
-               // border: solid 1px black;
-                border-radius:50%;
-              }
-              h4{
-                font-weight: bold;
-                display: inline-block;
+                // border: solid 1px black;
+                border-radius: 50%;
+                &:nth-of-type(2) {
+                  background-color: transparent;
+                  padding-left: 0;
+                  padding-right: 0;
+                  margin-right: 0;
 
+                }
               }
+              .buttons {
+                margin-top: 40px;
 
+                a {
+                  margin-bottom: 50px;
+                  line-height: 80px;
+                  width: 250px;
+                  border-radius: 10px;
+                  color: white;
+                  background-image: url("../images/button.png");
+                  background-position: top center;
+                  background-size: cover;
+                  text-decoration: none;
+                  display: inline-block;
+                  font-size: 24px;
+                  font-family: "PT Sans", sans-serif;
+                  font-weight: bold;
+                  &:nth-of-type(2) {
+                    margin-left: 20px;
+
+                  }
+                }
+              }
             }
           }
         }
