--- a/css/style.scss
+++ b/css/style.scss
@@ -256,7 +256,7 @@ section {
     .container-fluid {
       background-color: black;
       .container {
-        padding-bottom: 500px;
+
         background-image: url("../images/fire.png");
         background-position: top center;
         background-size: contain;
@@ -347,6 +347,119 @@ section {
           }
         }
 
+      }
+    }
+  }
+  .girl {
+    .container-fluid {
+      background-color: black;
+      .container {
+        .row {
+          .col-md-12 {
+            margin-bottom: 58px;
+            padding-top: 65px;
+            .product_description {
+              background-image: url("../images/girl_2.png");
+              background-position: right;
+              background-size: contain;
+              background-repeat: no-repeat;
+              border-radius: 10px;
+              padding-top: 25px;
+              padding-left: 42px;
+              background-color: white;
+              max-width: 980px;
+              margin: auto;
+
+              padding-bottom: 30px;
+
+              h2 {
+                span {
+                  color: red;
+                  text-transform: uppercase;
+                }
+
+                max-width: 540px;
+
+                color: black;
+                font-size: 48px;
+                font-family: 'PT Sans Narrow', sans-serif;
+                font-weight: bold;
+              }
+              p {
+                margin-bottom: 0;
+
+                max-width: 545px;
+                font-family: "PT Sans", sans-serif;
+                margin-top: 32px;
+                font-size: 17px;
+                span {
+                  font-weight: bold;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .advantages {
+    .container-fluid {
+
+      background-color: black;
+      .container {
+
+        .string {
+          .col-md-12 {
+            h2 {
+              margin-bottom: 50px;
+              font-family: 'PT Sans Narrow', sans-serif;
+              text-transform: uppercase;
+              font-size: 48px;
+              color: white;
+              span {
+                font-weight: bold;
+                &:nth-last-of-type(1) {
+                  color: red;
+                }
+              }
+            }
+
+          }
+
+        }
+        .examples {
+          margin: 0;
+          background-image: url("../images/bottle.png");
+          background-position: bottom left;
+          background-size: contain;
+          background-repeat: no-repeat;
+          padding-bottom: 50px;
+          margin-bottom: 50px;
+
+          .col-md-2 {
+
+            .adv_block {
+              margin-bottom: 15px;
+              height: 240px;
+              border-radius: 10px;
+              background-color: white;
+              h4 {
+                text-align: center;
+                font-size: 16px;
+
+                color: black;
+                font-family: "PT Sans", sans-serif;
+                font-weight: bold;
+              }
+              img {
+                width: 100%;
+                height: 168px;
+
+              }
+            }
+
+          }
+        }
       }
     }
   }
