--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,46 @@ section .advantages .container-fluid {
       section .advantages .container-fluid .container .examples .col-md-2 .adv_block img {
         width: 100%;
         height: 168px; }
+  section .advantages .container-fluid .container .row .col-md-12 .doctor {
+    position: relative;
+    padding-bottom: 30px;
+    background-image: url("../images/doctor_im.png");
+    background-position: right;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    padding-top: 25px;
+    padding-left: 42px;
+    background-color: white;
+    max-width: 985px;
+    margin: auto;
+    margin-bottom: 15px; }
+    section .advantages .container-fluid .container .row .col-md-12 .doctor img {
+      width: 190px;
+      height: 60px;
+      position: absolute;
+      bottom: 15px;
+      left: 330px; }
+    section .advantages .container-fluid .container .row .col-md-12 .doctor h2 {
+      text-transform: uppercase;
+      max-width: 540px;
+      color: black;
+      font-size: 48px;
+      font-family: 'PT Sans Narrow', sans-serif;
+      font-weight: bold; }
+      section .advantages .container-fluid .container .row .col-md-12 .doctor h2 span {
+        color: red;
+        text-transform: uppercase; }
+    section .advantages .container-fluid .container .row .col-md-12 .doctor p {
+      margin-bottom: 0;
+      max-width: 545px;
+      font-family: "PT Sans", sans-serif;
+      margin-top: 32px;
+      font-size: 16px; }
+      section .advantages .container-fluid .container .row .col-md-12 .doctor p:last-child {
+        font-weight: bold; }
+      section .advantages .container-fluid .container .row .col-md-12 .doctor p span {
+        font-weight: bold; }
 
 /* Contdonwn */
 body {
