--- a/css/style.scss
+++ b/css/style.scss
@@ -460,6 +460,65 @@ section {
 
           }
         }
+        .row {
+
+          .col-md-12 {
+
+            .doctor {
+              position: relative;
+
+              padding-bottom: 30px;
+              background-image: url("../images/doctor_im.png");
+              background-position: right;
+              background-size: contain;
+              background-repeat: no-repeat;
+              border-radius: 10px;
+              padding-top: 25px;
+              padding-left: 42px;
+              background-color: white;
+              max-width: 985px;
+              margin: auto;
+              margin-bottom: 15px;
+
+              img {
+                width: 190px;
+                height: 60px;
+                position: absolute;
+                bottom: 15px;
+                left: 330px;
+
+              }
+
+              h2 {
+                span {
+                  color: red;
+                  text-transform: uppercase;
+                }
+                text-transform: uppercase;
+                max-width: 540px;
+
+                color: black;
+                font-size: 48px;
+                font-family: 'PT Sans Narrow', sans-serif;
+                font-weight: bold;
+              }
+              p {
+                margin-bottom: 0;
+
+                max-width: 545px;
+                font-family: "PT Sans", sans-serif;
+                margin-top: 32px;
+                font-size: 16px;
+                &:last-child {
+                  font-weight: bold;
+                }
+                span {
+                  font-weight: bold;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
